--- a/TestProjects/UniversalGraphicsTest/Packages/manifest.json
+++ b/TestProjects/UniversalGraphicsTest/Packages/manifest.json
@@ -14,6 +14,7 @@
         "com.unity.test-framework.utp-reporter": "1.0.2-preview",
         "com.unity.testframework.graphics": "7.5.0-preview",
         "com.unity.ugui": "1.0.0",
+        "com.unity.xr.mock-hmd": "1.1.3-preview.1",
         "com.unity.modules.ai": "1.0.0",
         "com.unity.modules.androidjni": "1.0.0",
         "com.unity.modules.animation": "1.0.0",
