add MockHMD (disabled) to HDRP_RuntimeTests

--- a/TestProjects/HDRP_RuntimeTests/Packages/manifest.json
+++ b/TestProjects/HDRP_RuntimeTests/Packages/manifest.json
@@ -9,10 +9,11 @@
         "com.unity.test-framework": "1.1.14",
         "com.unity.test-framework.build": "0.0.1-preview.12",
         "com.unity.test-framework.utp-reporter": "1.0.2-preview",
-        "com.unity.testframework.graphics": "7.5.0-preview",
+        "com.unity.testframework.graphics": "file:C:/dev/packages/com.unity.testframework.graphics",
         "com.unity.testing.hdrp": "file:../../../com.unity.testing.hdrp",
         "com.unity.ugui": "1.0.0",
         "com.unity.visualeffectgraph": "file:../../../com.unity.visualeffectgraph",
+        "com.unity.xr.mock-hmd": "file:C:/dev/packages/xr.sdk.mock-hmd/com.unity.xr.mock-hmd",
         "com.unity.modules.ai": "1.0.0",
         "com.unity.modules.androidjni": "1.0.0",
         "com.unity.modules.animation": "1.0.0",
