--- a/TestProjects/UniversalGraphicsTest/Packages/manifest.json
+++ b/TestProjects/UniversalGraphicsTest/Packages/manifest.json
@@ -12,9 +12,9 @@
         "com.unity.test-framework": "1.1.14",
         "com.unity.test-framework.build": "0.0.1-preview.12",
         "com.unity.test-framework.utp-reporter": "1.0.2-preview",
-        "com.unity.testframework.graphics": "7.5.0-preview",
+        "com.unity.testframework.graphics": "file:C:/dev/packages/com.unity.testframework.graphics",
         "com.unity.ugui": "1.0.0",
-        "com.unity.xr.mock-hmd": "1.1.3-preview.1",
+        "com.unity.xr.mock-hmd": "file:C:/dev/packages/xr.sdk.mock-hmd/com.unity.xr.mock-hmd",
         "com.unity.modules.ai": "1.0.0",
         "com.unity.modules.androidjni": "1.0.0",
         "com.unity.modules.animation": "1.0.0",
