--- a/TestProjects/HDRP_HybridTests/Assets/Tests/Runtime/TestRuntime.asmdef
+++ b/TestProjects/HDRP_HybridTests/Assets/Tests/Runtime/TestRuntime.asmdef
@@ -1,6 +1,7 @@
 {
     "name": "TestRuntime",
     "references": [
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
         "GUID:c081bc530f560634bb5c21d4b323a7f1",
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
         "GUID:0acc523941302664db1f4e527237feb3",
