--- a/.yamato/urp_performance_boatattack-win-dx11.yml
+++ b/.yamato/urp_performance_boatattack-win-dx11.yml
@@ -15,8 +15,6 @@ URP_Performance_BoatAttack_Win_DX11_performance_playmode_runtime_mono_Linear_tru
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        BOAT_ATTACK_BRANCH: master
-        BOAT_ATTACK_REVISION: head
     commands:
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr.bat --output TestProjects/BoatAttack/utr.bat
       -  cd TestProjects/BoatAttack && utr --artifacts_path=test-results --performance-project-id=BoatAttack --platform=StandaloneWindows64 --player-connection-ip=auto --player-load-path=../../players --report-performance-data --reruncount=2 --suite=playmode --timeout=1200
@@ -36,11 +34,8 @@ Build_URP_Performance_BoatAttack_Win_DX11_performance_playmode_runtime_mono_Line
         flavor: b1.xlarge
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        BOAT_ATTACK_BRANCH: master
-        BOAT_ATTACK_REVISION: head
     commands:
-      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b %BOAT_ATTACK_BRANCH% TestProjects/BoatAttack
-      -  cd TestProjects/BoatAttack && git checkout %BOAT_ATTACK_REVISION%
+      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b master TestProjects/BoatAttack
       -  NetSh Advfirewall set allprofiles state off
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -88,11 +83,8 @@ URP_Performance_BoatAttack_Win_DX11_performance_playmode_editor_mono_Linear_trun
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        BOAT_ATTACK_BRANCH: master
-        BOAT_ATTACK_REVISION: head
     commands:
-      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b %BOAT_ATTACK_BRANCH% TestProjects/BoatAttack
-      -  cd TestProjects/BoatAttack && git checkout %BOAT_ATTACK_REVISION%
+      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b master TestProjects/BoatAttack
       -  NetSh Advfirewall set allprofiles state off
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -137,11 +129,8 @@ URP_Performance_BoatAttack_Win_DX11_performance_editmode_build_mono_Linear_trunk
         flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        BOAT_ATTACK_BRANCH: master
-        BOAT_ATTACK_REVISION: head
     commands:
-      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b %BOAT_ATTACK_BRANCH% TestProjects/BoatAttack
-      -  cd TestProjects/BoatAttack && git checkout %BOAT_ATTACK_REVISION%
+      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b master TestProjects/BoatAttack
       -  NetSh Advfirewall set allprofiles state off
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -187,8 +176,6 @@ URP_Performance_BoatAttack_Win_DX11_performance_playmode_runtime_mono_Linear_CUS
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        BOAT_ATTACK_BRANCH: master
-        BOAT_ATTACK_REVISION: head
     commands:
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr.bat --output TestProjects/BoatAttack/utr.bat
       -  cd TestProjects/BoatAttack && utr --artifacts_path=test-results --performance-project-id=BoatAttack --platform=StandaloneWindows64 --player-connection-ip=auto --player-load-path=../../players --report-performance-data --reruncount=2 --suite=playmode --timeout=1200
@@ -211,11 +198,8 @@ Build_URP_Performance_BoatAttack_Win_DX11_performance_playmode_runtime_mono_Line
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        BOAT_ATTACK_BRANCH: master
-        BOAT_ATTACK_REVISION: head
     commands:
-      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b %BOAT_ATTACK_BRANCH% TestProjects/BoatAttack
-      -  cd TestProjects/BoatAttack && git checkout %BOAT_ATTACK_REVISION%
+      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b master TestProjects/BoatAttack
       -  NetSh Advfirewall set allprofiles state off
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -267,11 +251,8 @@ URP_Performance_BoatAttack_Win_DX11_performance_playmode_editor_mono_Linear_CUST
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        BOAT_ATTACK_BRANCH: master
-        BOAT_ATTACK_REVISION: head
     commands:
-      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b %BOAT_ATTACK_BRANCH% TestProjects/BoatAttack
-      -  cd TestProjects/BoatAttack && git checkout %BOAT_ATTACK_REVISION%
+      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b master TestProjects/BoatAttack
       -  NetSh Advfirewall set allprofiles state off
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
@@ -320,11 +301,8 @@ URP_Performance_BoatAttack_Win_DX11_performance_editmode_build_mono_Linear_CUSTO
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        BOAT_ATTACK_BRANCH: master
-        BOAT_ATTACK_REVISION: head
     commands:
-      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b %BOAT_ATTACK_BRANCH% TestProjects/BoatAttack
-      -  cd TestProjects/BoatAttack && git checkout %BOAT_ATTACK_REVISION%
+      -  git clone https://github.com/Unity-Technologies/BoatAttack.git -b master TestProjects/BoatAttack
       -  NetSh Advfirewall set allprofiles state off
       -  choco source add -n Unity -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  choco install unity-config
