--- a/.yamato/all-universal.yml
+++ b/.yamato/all-universal.yml
@@ -12,11 +12,15 @@ PR_Universal_trunk:
     dependencies:
       -  path: .yamato/universal-win-dx11.yml#Universal_Win_DX11_Standalone_cache_mono_Linear_trunk
          rerun: on-new-revision
+      -  path: .yamato/universal-win-dx11.yml#Universal_Win_DX11_Standalone_XR_cache_mono_Linear_trunk
+         rerun: on-new-revision
       -  path: .yamato/universal-win-dx11.yml#Universal_Win_DX11_playmode_XR_cache_mono_Linear_trunk
          rerun: on-new-revision
       -  path: .yamato/universal-win-dx11.yml#Universal_Win_DX11_editmode_mono_Linear_trunk
          rerun: on-new-revision
       -  path: .yamato/universal-win-dx12.yml#Universal_Win_DX12_Standalone_cache_mono_Linear_trunk
+         rerun: on-new-revision
+      -  path: .yamato/universal-win-dx12.yml#Universal_Win_DX12_Standalone_XR_cache_mono_Linear_trunk
          rerun: on-new-revision
       -  path: .yamato/universal-win-vulkan.yml#Universal_Win_Vulkan_Standalone_cache_mono_Linear_trunk
          rerun: on-new-revision
@@ -82,11 +86,15 @@ PR_Universal_CUSTOM-REVISION:
     dependencies:
       -  path: .yamato/universal-win-dx11.yml#Universal_Win_DX11_Standalone_cache_mono_Linear_CUSTOM-REVISION
          rerun: always
+      -  path: .yamato/universal-win-dx11.yml#Universal_Win_DX11_Standalone_XR_cache_mono_Linear_CUSTOM-REVISION
+         rerun: always
       -  path: .yamato/universal-win-dx11.yml#Universal_Win_DX11_playmode_XR_cache_mono_Linear_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/universal-win-dx11.yml#Universal_Win_DX11_editmode_mono_Linear_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/universal-win-dx12.yml#Universal_Win_DX12_Standalone_cache_mono_Linear_CUSTOM-REVISION
+         rerun: always
+      -  path: .yamato/universal-win-dx12.yml#Universal_Win_DX12_Standalone_XR_cache_mono_Linear_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/universal-win-vulkan.yml#Universal_Win_Vulkan_Standalone_cache_mono_Linear_CUSTOM-REVISION
          rerun: always
